add clases o materiales por cursos chat general y por clases, crear usuarios solo con admin

--- a/client/layout/main_principal.html
+++ b/client/layout/main_principal.html
@@ -1,6 +1,6 @@
 <template name="main_principal">
       <div class="wrapper">
-         <div class="sidebar" data-color="purple" data-image="../assets/img/sidebar-1.jpg">
+         <div class="sidebar" data-color="purple" data-image="images/sidebar-4.jpg">
             <!--
                Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
                
@@ -29,7 +29,7 @@
                   {{/if}}
                   {{#if isInRole 'admin'}}
                   <li>
-                     <a href="user.html">
+                     <a href="/full-usuarios">
                         <i class="material-icons">person</i>
                         <p>Usuarios</p>
                      </a>
@@ -42,12 +42,10 @@
                         <p>Crear Cursos</p>
                      </a>
                   </li>
-                  {{/if}}
-                  {{#if isInRole 'admin,facilitador'}}
                   <li>
-                     <a href="typography.html">
-                        <i class="material-icons">library_books</i>
-                        <p>Crear Materias</p>
+                     <a href="/cursos">
+                        <i class="material-icons">bubble_chart</i>
+                        <p>Mis Cursos</p>
                      </a>
                   </li>
                   {{/if}}
@@ -58,9 +56,9 @@
                      </a>
                   </li>
                   <li>
-                     <a href="/cursos">
+                     <a href="/full-cursos">
                         <i class="material-icons">bubble_chart</i>
-                        <p>Cursos</p>
+                        <p>Todos los Cursos</p>
                      </a>
                   </li>
                   <!--<li>
