--- a/client/layout/main_principal.html
+++ b/client/layout/main_principal.html
@@ -117,7 +117,7 @@
                               {{/if}}
                            </a>
                            <ul class="dropdown-menu">
-                              <li><a href="#">Mi perfil</a></li>
+                              <li><a href="/perfil-usuarios">Mi perfil</a></li>
                               <li><a href="/cursos">Cursos</a></li>
                               <li><a href="#">Materiales</a></li>
                               <li><a href="#" class="logout">Cerrar Session</a></li>
