editar perfil de usuario

--- a/imports/templates/crearusuario.html
+++ b/imports/templates/crearusuario.html
@@ -271,7 +271,7 @@
 </template>
 
 <template name = "perfil_usuario">
-    {{#with firstName}}
+    {{#with usuario}}
     <div class="row">
         <div class="col-md-4">
             <div class="card card-profile">
@@ -286,9 +286,9 @@
                     <p class="card-content">
                         Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
                     </p>
-                    <a href="#pablo" class="btn btn-primary btn-round">Editar Mi perfil</a>
+                    <a href="/editar-perfil" class="btn btn-primary btn-round">Editar Mi perfil</a>
 
-                    <a href="#pablo" class="btn btn-primary btn-round">Cambiar mi password</a>
+                    <a href="#" class="btn btn-primary btn-round">Cambiar mi password</a>
                 </div>
                
             </div>
@@ -364,4 +364,82 @@
       </div>
    </div>
     {{/with}}
+</template>
+
+<template name="editar_perfil">
+     {{#with edituser}}
+   <div class="row">
+      <div class="col-md-12">
+         <div class="card">
+            <div class="card-header" data-background-color="purple">
+               <h4 class="title ">Editar Mi Perfil</h4>
+               <p class="category">Tenga cuidado con los campos editando</p>
+            </div>
+            <div class="card-content">
+               <form>
+                  <div class="row">
+                     <div class="col-md-5">
+                        <div class="form-group label-floating is-focused">
+                           <label class="control-label">Nombres Completos</label>
+                           <input type="text" name="nombres" id="nombres" class="form-control" value = "{{profile.Nombres}}">
+                           <span class="material-input"></span>
+                        </div>
+                     </div>
+                     <div class="col-md-3">
+                        <div class="form-group label-floating is-focused">
+                           <label class="control-label">Apellido Paterno</label>
+                           <input type="text" name="apellidoP" id="apellidoP" class="form-control" value = "{{profile.ApellidoP}}">
+                           <span class="material-input"></span>
+                        </div>
+                     </div>
+                     <div class="col-md-4">
+                        <div class="form-group label-floating is-focused">
+                           <label class="control-label">Apellido Materno</label>
+                           <input type="text" name="apellidoM" id="apellidoM" class="form-control" value = "{{profile.ApellidoM}}">
+                           <span class="material-input"></span>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="col-md-6">
+                        <div class="form-group label-floating is-focused">
+                           <label class="control-label">Correo Electronico</label>
+                           <input type="email" name="email"  id="email" class="form-control" value = "{{emails.[0].address}}">
+                           <span class="material-input"></span>
+                        </div>
+                     </div>
+                     <div class="col-md-6">
+                        <div class="form-group label-floating is-focused">
+                           <label class="control-label">Numero de telefono</label>
+                           <input type="text" name="cel" id="cel" class="form-control" value="{{profile.Celular}}">
+                           <span class="material-input"></span>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="col-md-6">
+                        <div class="form-group label-floating is-focused">
+                           <label class="control-label">Direccion</label>
+                           <input type="text" name="direccion" id="direccion" class="form-control" value="{{profile.Direccion}}">
+                           <span class="material-input"></span>
+                        </div>
+                     </div>
+                     
+                     <div class="col-md-6">
+                        <div class="form-group label-floating is-focused">
+                           <label class="control-label">Carrera</label>
+                           <input type="text" name="carrera" id="carrera" class="form-control" value="{{profile.Carrera}}">
+                           <span class="material-input"></span>
+                        </div>
+                     </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary pull-right">Editar mi Perfil</button>
+                  <div class="clearfix"></div>
+               </form>
+               <!--{{>atForm state='signUp'}}-->
+            </div>
+         </div>
+      </div>
+   </div>
+   {{/with}}
 </template>
